namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: html-kube-tester
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
