deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-kube-tester
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector: 
          matchLabels:
            app.kubernetes.io/instance: html-kube-tester
        matchLabelKeys:
        - pod-template-hash
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector: 
          matchLabels:
            app.kubernetes.io/instance: html-kube-tester
        matchLabelKeys:
        - pod-template-hash
      containers:
      - name: html-kube-tester
        image: quay.io/simbelmas/nginx:stable
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ['ALL']
        volumeMounts:
        - name: app-data
          mountPath: /var/www/html
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 10m
          limits:
            cpu: 40m
      volumes:
      - name: init
        configMap:
          defaultMode: 0755
          name: &html-kube-test-cm html-kube-tester-config
          items:
          - key: init.sh
            path: html-kube-tester-init.sh
      - name: app-data
        emptyDir: {}
