service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-kube-tester
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
  selector: {}
